# GitPagedArchiveBackend

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  requirements.txt  setup.py
.github/workflows/: build_test.yaml
CMAKE/: Findlibgit2.cmake
paged_archive/: __init__.py
src/: CMakeLists.txt  _archive.c  _archive.pyx  archive.pxd  archive.pyx  backend.c  backend.pyx  gitbackend.c  gitbackend.h  paged_archive.pyx
tests/: test_link.py
